added email function

--- a/Debt Minder - Intacct/Views/Home/Email.cshtml
+++ b/Debt Minder - Intacct/Views/Home/Email.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Debt_Minder___Intacct.Models.EmailViewModel
 
 @{
-    ViewData["Title"] = $"Details for {Model.CustomerName}";
+    ViewData["Title"] = $"Emails for {Model.CustomerName}";
 }
 
 <!DOCTYPE html>
